--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.2",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-apple": "^2.0.1",
-    "passport-google": "^0.3.0"
+    "passport-google": "^0.3.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
