--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.2",
@@ -20,6 +21,7 @@
     "passport": "^0.6.0",
     "passport-apple": "^2.0.1",
     "passport-google": "^0.3.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   }
 }
