--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.2",
+    "mongoose": "^6.8.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-apple": "^2.0.1",
     "passport-google": "^0.3.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.26.0"
   }
 }
