--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -26,6 +25,7 @@
     "passport-google": "^0.3.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "sequelize": "^6.26.0"
   }
 }
