--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "geoip-country": "^4.1.36",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.2",
     "mongoose": "^6.8.0",
@@ -29,6 +30,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "request-ip": "^3.3.0",
     "sequelize": "^6.26.0"
   }
 }
